--- a/content/index.html
+++ b/content/index.html
@@ -2,5 +2,6 @@
 <html>
   <body style="background-color:white">
     <h2>Hello Tech Exchange!</h2>
+    <h4>Monday, 10th April 2017</h4>
   </body>
 </html>
