--- a/content/index.html
+++ b/content/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <body style="background-color:white">
-    <h2>Hello Tech Exchange!</h2>
-    <h4>Monday, 10th April 2017 - v0.0.4</h4>
+    <h2>Hello Tech Exchange 11!</h2>
+    <h4>v0.0.5</h4>
   </body>
 </html>
